k8s-ingressRoutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.beaners.club`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-server-tls
